JSW Devsb/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Remarks__c</fullName>
        <label>Acceptance Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount_INR__c</fullName>
        <label>Amount(INR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Committe_Remarks__c</fullName>
        <label>Approval Committe Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approve__c</fullName>
        <label>Approve</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Details__c</fullName>
        <label>Batch Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <displayFormat>C-{0000}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Case_Owner_1__c</fullName>
        <label>Case Owner 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_2__c</fullName>
        <label>Case Owner 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closure_Date__c</fullName>
        <label>Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closure_Remarks__c</fullName>
        <label>Closure Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <label>Communication</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compensation_Status__c</fullName>
        <label>Compensation Status</label>
        <picklist>
            <picklistValues>
                <fullName>none</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compensation__c</fullName>
        <label>Compensation</label>
        <picklist>
            <picklistValues>
                <fullName>IN_MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN_RS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complaint_Breif__c</fullName>
        <label>Complaint Breif</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complaint_Details__c</fullName>
        <label>Complaint Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complaint_Reference__c</fullName>
        <formula>CASE(TEXT( Customer_Category__c ) ,&apos;Technical&apos;,&apos;TC&apos;,&apos;Non-Technical&apos;,&apos;NT&apos;,&apos;OT&apos;) +&apos;-&apos;+ 
IF(ISPICKVAL( Product__c , &apos;Cement&apos;) ,&apos;C&apos;,&apos;G&apos;) +&apos;-&apos;+
State233__c +&apos;-&apos;+ District__r.District_Code__c +&apos;-&apos;+ CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complaint Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Type__c</fullName>
        <label>Complaint Type</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visual (Product)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Visual (Product)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <label>Complaint</label>
        <picklist>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retailer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conclusion__c</fullName>
        <label>Conclusion</label>
        <picklist>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Category__c</fullName>
        <label>Complaint Category</label>
        <picklist>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <formula>Account.Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Mobile_No__c</fullName>
        <label>Customer Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Supply__c</fullName>
        <label>Date of Supply</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Use__c</fullName>
        <label>Date of Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detail_Investigation__c</fullName>
        <label>Detail Investigation</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detailed_Investigation_By__c</fullName>
        <label>Detailed Investigation By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Name__c</fullName>
        <formula>District__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District</label>
        <referenceTo>Districts__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_InvestigationBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Investigation By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Investigation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Investigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Investigation_picklist__c</fullName>
        <label>First Investigation</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate_Pass_Date__c</fullName>
        <label>Gate Pass Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gate_Pass_No__c</fullName>
        <label>Gate Pass No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <label>Invoice No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Rate_Rs_MT__c</fullName>
        <label>Invoice Rate (Rs/MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Dealer_Retailer__c</fullName>
        <label>Name of the Dealer/Retailer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Bags__c</fullName>
        <label>No of Bags</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PIN_Code__c</fullName>
        <label>PIN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Defect__c</fullName>
        <label>Primary Defect</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Not Meeting BIS Specifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixing of GGBS in Cement Bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Material with PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strength</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulation of Granules/Lumps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply of GGBS instead of PSC in Bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Bag Weights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cut &amp; Torn bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Material in GGBS/Cement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cracks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setting Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weak Mortar Joints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others (Application)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others (Visual)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others (Non-visual)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others (Commercial)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others (Logistics)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efflorescence</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Cement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GGBS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_By__c</fullName>
        <label>Proposed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Date__c</fullName>
        <label>Proposed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity_MT__c</fullName>
        <label>Quantity(MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_in_MT__c</fullName>
        <label>Quantity in MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RR_CDN_Date__c</fullName>
        <label>RR/CDN Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RR_CDN_No__c</fullName>
        <label>RR/CDN No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rake_No__c</fullName>
        <label>Rake No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_For_Acceptance__c</fullName>
        <label>Reason For Acceptance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SO</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>SO</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <picklist>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Trade</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Settlement__c</fullName>
        <label>Settlement</label>
        <picklist>
            <picklistValues>
                <fullName>Pending for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Closure</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State233__c</fullName>
        <formula>District__r.State__r.State_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State233</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>District__r.State__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supply_Plant__c</fullName>
        <label>Supply Plant</label>
        <picklist>
            <picklistValues>
                <fullName>Vijayanagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nandyal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dolvi</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TSO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TSO</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>TSO</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transport_Type__c</fullName>
        <label>Transport Type</label>
        <picklist>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Road</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Comments__c</fullName>
        <label>Visit Comments</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>APEX_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>APEX</label>
        <queue>APEX</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AP_CCFT_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>AP CCFT</label>
        <queue>AP_CCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AP_RCFT_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>AP RCFT</label>
        <queue>AP_RCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Kerala_RCFT_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Kerala RCFT</label>
        <queue>Kerala_RCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Kurnool_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Kurnool Team</label>
        <queue>Kurnool_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>South_Karnataka_CCFT_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Karnataka CCFT</label>
        <queue>Karnataka_CCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>South_Karnataka_RCFT_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Karnataka RCFT</label>
        <queue>Karnataka_RCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tamil_Nadu_CCFT_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Tamil Nadu CCFT</label>
        <queue>Tamil_Nadu_CCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tamil_Nadu_RCFT_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Tamil Nadu RCFT</label>
        <queue>Tamil_Nadu_RCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Telangana_CCFT_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Telangana CCFT</label>
        <queue>Telangana_CCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Telangana_RCFT_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Telangana RCFT</label>
        <queue>Telangana_RCFT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Accept_Remarks</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Reason_For_Acceptance__c,&apos;Yes&apos;), ISBLANK( Acceptance_Remarks__c) , false)</errorConditionFormula>
        <errorDisplayField>Acceptance_Remarks__c</errorDisplayField>
        <errorMessage>Please Provide Acceptance Remarrks</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Complaint_Type</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISBLANK( TEXT(Complaint_Type__c) ),false,IF( ISBLANK( TEXT(Supply_Plant__c) ),true,false ))</errorConditionFormula>
        <errorMessage>Please Select Supply Plant</errorMessage>
    </validationRules>
</CustomObject>